refactoring vy_Coordinator out of the project

--- a/force-app/main/default/classes/vy_EventHandler.cls
+++ b/force-app/main/default/classes/vy_EventHandler.cls
@@ -1,4 +1,5 @@
 // Event Handler
+// Interfaces with Signals and Processes 
 
 public class vy_EventHandler {
     
@@ -9,55 +10,7 @@ public class vy_EventHandler {
         for ( Vyuha_Event__e event : events ) {
             vy_Signal signal = (vy_Signal) JSON.deserialize( event.Data__c, vy_Signal.class );
             signal.initialize ();
-            if ( signal.isValid ()) {
-                // load appropriate processorItem
-                vy_ProcessorItem processorItem;
-                if ( signal.scheduleItemId != null ) {
-                    // load schedule Item
-                    vy_ScheduleItem scheduleItem = new vy_ScheduleItem ( new vy_TimeHelper ());
-                    scheduleItem.load ( signal.scheduleItemId );
-                    processorItem = (vy_ProcessorItem) scheduleItem;
-                } else if ( signal.formationId != null ) {
-                    // load a formation
-                    vy_Formation formation = new vy_Formation ();
-                    formation.load ( signal.formationId );
-                    processorItem = (vy_ProcessorItem) formation;
-                }
-
-                // process actions
-                if ( signal.vType == vy_Signal.Signal_Type.ACTION ) {
-                    vy_EventHandler.processActions ( signal, processorItem );
-                } else if ( signal.vType == vy_Signal.Signal_Type.STATUS ) {
-                    vy_EventHandler.processStatus ( signal, processorItem );
-                }
-                
-            } else {
-                // handle invalid signal
-            }
-            
+            signal.process ();
         }
-    }
-
-    private static void processActions ( vy_Signal signal, vy_ProcessorItem processorItem ) {
-        if ( signal.vAction == vy_Signal.Vyuha_Action.START ) {
-            // check validity and start if possible
-            if ( processorItem.isValid () == false ) {
-                // handle invalid item
-            } else if ( processorItem.isRunning () == true ) {
-                // handle already running
-            } else if ( processorItem.isRunnable () != true ) {
-                // handle not runnable
-            } else { 
-                // start
-                processorItem.start ();
-            }
-        }
-        if ( signal.vAction == vy_Signal.Vyuha_Action.STOP ) {
-            // attempt to stop
-        }
-    }
-
-    private static void processStatus ( vy_Signal signal, vy_ProcessorItem processorItem ) {
-        processorItem.setStatus ( signal.vStatus );
     }
 }
