refactoring signal to event bus

--- a/force-app/main/default/classes/vy_EventHandler.cls
+++ b/force-app/main/default/classes/vy_EventHandler.cls
@@ -1,7 +1,7 @@
 // Event Handler
 // Interfaces with Signals and Processes 
 
-public class vy_EventHandler {
+public class vy_EventHandler implements vy_ExceptionParent {
     
     // primary processor for incoming Events
 
@@ -12,5 +12,24 @@ public class vy_EventHandler {
             signal.initialize ();
             signal.process ();
         }
+    }
+
+    public static void create ( vy_Signal signal ) {
+        String jsonStr = JSON.serialize( signal );
+        Vyuha_Event__e event = new Vyuha_Event__e ();
+        event.data__c = jsonStr;
+        event.Apex_Job_ID__c = signal.apexJobId;
+        event.Formation_ID__c = signal.formationId;
+        event.Schedule_Item_ID__c = signal.scheduleItemId;
+        event.Status__c = signal.status;
+        Database.SaveResult sr = EventBus.publish ( event );
+        if ( sr.isSuccess () == false ) {
+            // handle exception
+            throw new vy_Exception ( new vy_EventHandler (), 'create event failed' );
+        }
+    }
+
+    public string className () {
+        return 'vy_EventHandler';
     }
 }
